[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Effects/Transistion/FadeIn.res" type="PackedScene" id=1]
[ext_resource path="res://src/Scenes/Stages/stage.gd" type="Script" id=2]
[ext_resource path="res://src/GUI/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scenes/GameOverScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/GUI/MainMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/GUI/DebugMenu/DebugMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/images/Vinette.png" type="Texture" id=7]
[ext_resource path="res://src/Scenes/Lighting.gd" type="Script" id=17]

[node name="Stage" type="Node2D"]
script = ExtResource( 2 )

[node name="DaypartTimer" type="Timer" parent="."]
wait_time = 0.001

[node name="FadeIn" parent="." instance=ExtResource( 1 )]

[node name="AmbientLight" type="CanvasModulate" parent="."]
light_mask = 1048575
color = Color( 1.22461e-16, 1.22461e-16, 1.22461e-16, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
offset_v = -1.0
drag_margin_left = 0.05
drag_margin_top = 0.3
drag_margin_right = 0.05
drag_margin_bottom = 0.5

[node name="Entrances" type="Node2D" parent="."]

[node name="Default" type="Position2D" parent="Entrances"]
__meta__ = {
"_gizmo_extents_": 24.0
}

[node name="Exits" type="Node2D" parent="."]

[node name="ParallaxLayers" type="Node2D" parent="."]

[node name="Tilemaps" type="Node2D" parent="."]
z_index = -4

[node name="Lighting" type="Node2D" parent="."]
z_index = 1
script = ExtResource( 17 )

[node name="Tween" type="Tween" parent="Lighting"]

[node name="Actors" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]
layer = 127

[node name="Vinette" type="Sprite" parent="GUI"]
self_modulate = Color( 1, 1, 1, 0.498039 )
texture = ExtResource( 7 )
centered = false

[node name="HealthBar" parent="GUI" instance=ExtResource( 3 )]
light_mask = 0
margin_left = 6.0
margin_top = 6.0
margin_right = -1143.0
margin_bottom = -679.0
rect_scale = Vector2( 2, 2 )

[node name="DebugMenu" parent="GUI" instance=ExtResource( 6 )]
visible = false

[node name="MainMenu" parent="GUI" instance=ExtResource( 5 )]
visible = false

[node name="GameOverScreen" parent="GUI" instance=ExtResource( 4 )]
visible = false
text_fade_duration = 3.0

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -20.0
[connection signal="daybreak" from="." to="Lighting" method="_on_daybreak"]
[connection signal="nightfall" from="." to="Lighting" method="_on_nightfall"]
[connection signal="command_entered" from="GUI/DebugMenu" to="." method="_on_DebugMenu_command_entered"]
